<resources>
    <string name="app_name">Popular Movie</string>

    <string name="movie_detail">Movie Detail</string>
    <string name="connection_error_text">Could not fetch movie data, \nPlease check your internet connection.</string>
    <string name="refresh_button">Refresh</string>
    <string name="release_label">Release</string>
    <string name="rating_label">Rating</string>
    <string name="overview_label">Overview</string>
    <string name="rating_max_value">/ 10</string>
    <string name="poster_image_text">Poster Image</string>

    <string name="pref_sort_by_key" translatable="false">sort_by</string>
    <string name="pref_sort_by_title">Sort Movie By</string>
    <string name="pref_sort_by_default">popular</string>
    <string name="pref_sort_by_favorite">favorite</string>
    <string name="settings_menu_label">Settings</string>
    <string name="trailer_label">Trailer List</string>
    <string name="reviews_label">Reviews</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="unmark_from_favorite">Unmark from Favorite</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="movie_trailer_button">Movie Trailer</string>
</resources>
